Subscription alignment issues

--- a/src/app/pages/subscription/upgrade-subscription/upgrade-subscription.component.scss
+++ b/src/app/pages/subscription/upgrade-subscription/upgrade-subscription.component.scss
@@ -664,6 +664,9 @@
 .mt-15 {
   margin-top: 45px;
 }
+.mt-20 {
+  margin-top: 45px;
+}
 
 .mt-25 {
   margin-top: 65px;
@@ -675,6 +678,7 @@
 
 .grey {
   color: rgb(164, 163, 163) !important;
+  
 }
 .greyButton {
   color: grey;
@@ -740,4 +744,7 @@
 }
 .razorpayborder {
   border: 1px solid #3395ff !important;
+}
+.price_size {
+  font-size: 1.99rem  !important;
 }
